Add globalErros inside errors collection.