@@ -27,7 +27,13 @@ public class ControllerAdvisor {
         Map<String, List<String>> errorResponse = new HashMap<>();
         errorResponse.put("errors", error.getBindingResult().getFieldErrors()
                 .stream().map(FieldError::getDefaultMessage).collect(Collectors.toList()));
-        errorResponse.put("globalErrors", error.getBindingResult().getGlobalErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList()));
+        errorResponse.get("errors").addAll(
+                error.getBindingResult().getGlobalErrors()
+                        .stream()
+                        .map(DefaultMessageSourceResolvable::getDefaultMessage)
+                        .toList()
+        );
+        //errorResponse.put("globalErrors", error.getBindingResult().getGlobalErrors().stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList()));
         return ResponseEntity.status(406).body(errorResponse);
     }
 
